feat: add bookmark status when returning to market